# multovl

./: .gitignore  CMakeLists.txt  LICENSE  NERDS_ONLY.txt  README  README.md  README.txt  VERSION  quickbuild.sh  src_rearrangement_notes.md  visual_studio_notes.txt
bamtools2/: CMakeLists.txt  README
bamtools2/src/api/: CMakeLists.txt
bamtools2/src/api/internal/bam/: BamWriter_p.h
bamtools2/src/api/internal/io/: HostAddress_p.cpp
bamtools2/src/api/internal/sam/: SamHeaderValidator_p.h
bamtools2/src/shared/: bamtools_global.h
bamtools2/src/toolkit/: bamtools_version.h
cmake/: CodeCoverage.cmake  FindBamTools.cmake  FindCxxOpenMP.cmake  FindPQXX.cmake  FindPostgres.cmake  FindTBB.cmake  SVNrevision.cmake  coverage.cmake  gitrev.cmake  gitrevision.cmake  platformspec.cmake  toolchain.cmake
config/: regan.cfg
containers/docker/: .dockerignore  Dockerfile  README.md  docker_runner.sh  multovl_runner.sh
containers/singularity/: .gitignore  README.md  envcheck.def  multovl.def  ubuntu_devboost.def
containers/singularity/sandboxes/: .gitignore
doc/: README.txt  c++11_notes.md  c++17_notes.md  instructions_to_developers.md  license.txt  multovl.pptx  singularity_notes.md  source_code_fixes.md  src_rearrangement_notes.md  vbc_cluster_notes.md
doc/doxygen/: CMakeLists.txt  Doxyfile.in  groups.dox  mainpage.dox
doc/html/: guide.css  guide.html
singularity/: multovl_debug.recipe
src/: CMakeLists.txt  ancregion.cc  ancregion.hh  basepipeline.cc  basepipeline.hh  baseregion.hh  config.hh.in  config_info.cc  errors.cc  errors.hh  multioverlap.cc  multioverlap.hh  multiregion.cc  multiregion.hh  multireglimit.cc  multireglimit.hh  multovl.cc  multovlopts.cc  multovlopts.hh  multovlprob.cc  parmultovlprob.cc  pipeline.cc  pipeline.hh  polite.cc  polite.hh  region.cc  region.hh  reglimit.cc  reglimit.hh  timer.cc  timer.hh
src/api/: CMakeLists.txt
src/config/: CMakeLists.txt  build.c.in  build.h  multovl_config.c  stringify.h  thirdparty.c.in  thirdparty.h  version.c.in  version.h
src/db/: CMakeLists.txt  pgmultovl.cc  pgmultovlopts.cc  pgmultovlopts.hh  pgpipeline.cc  pgpipeline.hh
src/exercise/: CMakeLists.txt  inputfiles.cc  runner.bat.in  runner.sh.in  wgetopt.c  wgetopt.h
src/file/: CMakeLists.txt  bamio.cc  bamio.hh  classicopts.cc  classicopts.hh  classicpipeline.cc  classicpipeline.hh  empirdistr.cc  empirdistr.hh  fileformat.cc  fileformat.hh  fileio.cc  fileio.hh  freeregions.cc  freeregions.hh  linereader.cc  linereader.hh  linewriter.cc  linewriter.hh  multovl.cc  multovlprob.cc  probopts.cc  probopts.hh  probpipeline.cc  probpipeline.hh  randomgen.hh  randomplacer.cc  randomplacer.hh  shuffleovl.cc  shuffleovl.hh  stat.cc  stat.hh  textio.cc  textio.hh  trackio.hh
src/file/prob/: CMakeLists.txt  empirdistr.cc  empirdistr.hh  freeregions.cc  freeregions.hh  multovlprob.cc  parmultovlprob.cc  parprobopts.cc  parprobopts.hh  parprobpipeline.cc  parprobpipeline.hh  probopts.cc  probopts.hh  probpipeline.cc  probpipeline.hh  randomgen.hh  randomplacer.cc  randomplacer.hh  shuffleovl.cc  shuffleovl.hh  stat.cc  stat.hh
src/file/prob/test/: CMakeLists.txt  empirdistrtest.cc  freeregionstest.cc  randomplacertest.cc  shuffleovltest.cc  stattest.cc
src/file/test/: CMakeLists.txt  empirdistrtest.cc  fileformattest.cc  fileiotest.cc  freeregionstest.cc  inputfiles.cc  linereadertest.cc  linewritertest.cc  randomplacertest.cc  shuffleovltest.cc  stattest.cc
src/incl/multovl/: ancregion.hh  basepipeline.hh  baseregion.hh  classicopts.hh  classicpipeline.hh  config.hh  multioverlap.hh  multiregion.hh  multovlopts.hh  region.hh  reglimit.hh
src/incl/multovl/io/: bamio.hh  classicopts.hh  fileio.hh  linereader.hh  linewriter.hh  textio.hh  trackio.hh
src/incl/multovl/prob/: empirdistr.hh  freeregions.hh  parprobopts.hh  parprobpipeline.hh  probopts.hh  probpipeline.hh  randomgen.hh  shuffleovl.hh  stat.hh
src/lib/: CMakeLists.txt  ancregion.cc  basepipeline.cc  baseregion.cc  classicopts.cc  classicpipeline.cc  config.cc.in  errors.cc  multioverlap.cc  multiregion.cc  multovlopts.cc  polite.cc  region.cc  reglimit.cc  timer.cc
src/lib/io/: bamio.cc  components.cmake  fileformat.cc  fileio.cc  linereader.cc  linewriter.cc  textio.cc
src/lib/prob/: CMakeLists.txt  empirdistr.cc  freeregions.cc  parprobopts.cc  parprobpipeline.cc  probopts.cc  probpipeline.cc  shuffleovl.cc  stat.cc
src/scripts/: anctrack.awk  bed2gff.sh  multovltest.sh
src/shared/: bamtools_global.h
src/test/: CMakeLists.txt  ancregiontest.cc  baseregiontest.cc  errortest.cc  multioverlaptest.cc  multiregiontest.cc  multireglimittest.cc  multovloptstest.cc  politetest.cc  regiontest.cc  reglimittest.cc  tempfile.cc  tempfile.hh  timertest.cc
src/test/data/: rega.bed  rega12.bam  rega12.bed  regb.gff  regb12.bam  track2.bed  triplea.bed  tripleb.bed  triplec.bed
src/tests/: CMakeLists.txt  ancregiontest.cc  baseregiontest.cc  empirdistrtest.cc  errortest.cc  fileformattest.cc  fileiotest.cc  freeregionstest.cc  linereadertest.cc  linewritertest.cc  multioverlaptest.cc  multiregiontest.cc  multovloptstest.cc  politetest.cc  regiontest.cc  reglimittest.cc  shuffleovltest.cc  stattest.cc  tempfile.cc  tempfile.hh  timertest.cc
src/tests/data/: bad.bed  rega.gff  regb.bed  regb12.bed  track1.bed  triplea.bed  triplefree.bed
src/wbench/: CMakeLists.txt  serial.cc  serial.hh  wbregion.cc  wbregion.hh
src/wbench/test/: CMakeLists.txt  serialtest.cc
